   using wrong Value Storage enums. Enhance Value::VerifyRefreshedValue to
   handle almsot all types (Except Schedule) (Justin)
 - Issue #501 - Fix ThermostatFanMode when checking for Valid Modes (Justin)
 - Pull Request #659 - Added configuration file for D-Link Corp and DCH-Z110 Door/Window 3in1 sensor
   from psixilambda (Justin)
 - Issue #446 - Fix Visual Studio 2015 breakage. (Justin)

Version 1.2 
 - Released on 15/10/14

Version 1.1
 - Fixed Command Class Recieved Message Counter when we are handling a
   MultiInstanceMessageEncap Message (Justin)
 - Fixed Issue 310 - Unbalanced Lock/Release in Manager::IsNodeFailed and
   Manager::GetNodeQueryStage (Justin)
 - For Sleeping Devices - Do Not automatically add WakeUp Class to these
   devices if they advertise themselves as FrequentListening. This matches
   the Logic in the QueryStage functions where we skip querying the Device
   for Wakeup Configuration if its set as FLiRS. Needs some testing (Justin)
 - Options.xml file can now live in both the System Config Path
   (/etc/openzwave for example) or the Local Application Path. Local
   Options.xml will override any System Options.xml (Justin)
 - Updated the Include Paths so we only have to specify the top level src
   directory for GCC, and the rest of the headers are specified as subdirs.
   Based on work started by Svente Karisson (Justin)
 - A few fixes for Windows Calls and various casts required to eliminate
   warnings (Svente Karisson)
 - Add a Error String if we fail to parse our Options.xml files (Justin)
 - Added a Complete Door Lock Command Class (Justin)
 - Change the Logic in the UserCode Command Class to only retrive UserCodes
   upto the first available slot (Justin)
 - Add a ValueButton to the UserCode class to refresh all UserCodes (Justin)
 - Fixed Issue 301 - Updated Aeon Recessed Door Sensor (Justin)
 - Fixed Issue 302 - New ID for Aeon Labs Door/Window Sensor (Justin)
 - Fixed Issue 306 & 304 - Updated Fibaro FGMS Config File (Justin)